--- a/IHC_Teaching/Teaching And Learning.html
+++ b/IHC_Teaching/Teaching And Learning.html
@@ -7,25 +7,29 @@
 <link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1> IHC Teching & Learning </h1>
-<div>
-  <nav>
-    <ul>
-      <li class="index-collection"> <a href="https://www.suzannedelgizzo.net/">Work</a> </li>
-      <li class="blog-collection"> <a href="https://www.suzannedelgizzo.net/blog">Blog</a> </li>
-      <li class="page-collection"> <a href="https://www.suzannedelgizzo.net/about">About</a> </li>
-      <li class="page-collection"> <a href="https://www.suzannedelgizzo.net/curriculum-vitae">Curriculum Vitae</a> </li>
-      <li class="page-collection"> <a href="https://www.suzannedelgizzo.net/integratedhumanities">Integrated Humanities</a> </li>
-    </ul>
-  </nav>
-</div>
+
+  <div>
+    <h1 class="landingtitle"><a href="../IHC_Landing/index.html" style="text-decoration: none" class="landingtitle">INTEGRATED HUMANITIES CENTER</a></h1>
+    <nav>
+      <ul>
+        <li><a href="../IHC_Landing/index.html">Home</a></li>
+        <li><a href="../IHC_Teaching/Teaching And Learning.html">IHC Teaching and Learning</a></li>
+        <li><a href="../IHC_Pedagogy/pedagogy.html">IHC Pedagogy</a></li>
+        <li><a href="../IHC_Tools/tools.html">IHC Tools</a></li>
+        <li><a href="../IHC_VirtualConference/virtual-conference.html">IHC Virtual Conference Room</a></li>
+      </ul>
+    </nav>
+  </div>
 <div class="center">
+<h1> IHC Teching & Learning </h1>	
 <p>We are challenged to reconsider and innovate our approaches to teaching; learning due to COVID-19.  On this page, you will find resources that will help you navigate best practices and tools for creating disruption-resilient courses. </p>
 <p class="" style="white-space:pre-wrap;">Unlike the Spring 2020 semester, when we simply transferred our courses to remote delivery, we now have the opportunity to do better and get ahead of the curve. We have a brief window—but a window nonetheless—to consider how we might TRANSFORM our classes intentionally to part or fully remote delivery.</p>
 <p><strong>And it just got REAL</strong>.  Now that the College has moved to fully remote instruction for the Fall semester, our preparations will be more demanding than usual. Many of us will be learning Canvas as we are also thinking about how to adapt our courses pedagogically for remote instruction. If that feels like a lot to take on at once, that is because it is!&nbsp;The resources on these pages will help provide&nbsp;something like a “choose-your-own” adventure;road map!</p>
+	<div class="teachingcontainer">
 <h2 style="text-align:left;white-space:pre-wrap;">This resource is divided into three parts</h2>
 <h3 style="text-align:left;white-space:pre-wrap;">PEDAGOGY  |  TOOLS  |   The Virtual Conference Room</h3>
-<img src="Pedagogy+centered(1).jpg">, <img src="tools+centered(1).jpg">, <img src="Virtual+Conference+Room+Centered(1).jpg">
+<img src="../Training-page-main/Pedagogy+centered(1).jpg"><img src="../Training-page-main/tools+centered(1).jpg"><img src="../Training-page-main/Virtual+Conference+Room+Centered(1).jpg">
+	</div>
 <h1 style="text-align:left;white-space:pre-wrap;">Some new favorite sites</h1>
 <p class="" style="white-space:pre-wrap;">Looking for a good icebreaker?<strong>Try</strong><a><strong> this automatically generated list of (bizarre) questions for some fun</strong></a><strong>!</strong>
 <p class="" style="white-space:pre-wrap;">Carnegie Mellon University’s Global Communication Center’s<strong> </strong> <a href="https://www.youtube.com/watch?feature=youtu.be&amp;v=y5ShTBRw8xY"><strong>Overcoming Unconscious Bias on Your Team</strong></a></p>
