--- a/IHC_Teaching/teaching-learning.html
+++ b/IHC_Teaching/teaching-learning.html
@@ -26,7 +26,7 @@
   <p class="" style="white-space:pre-wrap;">Unlike the Spring 2020 semester, when we simply transferred our courses to remote delivery, we now have the opportunity to do better and get ahead of the curve. We have a brief window—but a window nonetheless—to consider how we might TRANSFORM our classes intentionally to part or fully remote delivery.</p>
   <p><strong>And it just got REAL</strong>.  Now that the College has moved to fully remote instruction for the Fall semester, our preparations will be more demanding than usual. Many of us will be learning Canvas as we are also thinking about how to adapt our courses pedagogically for remote instruction. If that feels like a lot to take on at once, that is because it is!&nbsp;The resources on these pages will help provide&nbsp;something like a “choose-your-own” adventure;road map!</p>
   <div>
-    <h2 style="text-align:center;white-space:pre-wrap;">This resource is divided into three parts</h2>
+    <h2 style="text-align:center;white-space:pre-wrap;">This resource is divided into three parts:</h2>
     <h3 style="text-align:center;white-space:pre-wrap;">PEDAGOGY  |  TOOLS  |   THE VIRTUAL CONFERENCE ROOM</h3>
     <div class="teachingcontainer">
 		<img src="../assets/Pedagogy+centered.jpg" alt="a classroom">
@@ -36,8 +36,8 @@
     <h1 style="text-align:center;white-space:pre-wrap;">Some new favorite sites</h1>
     <p class="" style="white-space:pre-wrap;">Looking for a good icebreaker?<strong> Try</strong><a href="https://perchance.org/gettingtoknowyou" target="_blank"><strong> this automatically generated list of (bizarre) questions for some fun</strong></a><strong>!</strong>
 	<p class="" style="white-space: pre-wrap;">Carnegie Mellon University's Global Communication Center's <a href="https://www.youtube.com/watch?v=y5ShTBRw8xY" target="_blank"><strong>Overcoming Unconcious Bias on Your Team</strong></a></p>
-    <p class="" style="white-space:pre-wrap;">Worried you are giving students too much work when designing asynchronous activities?  Try the <a href="https://cte.rice.edu/workload" target="_blank"><strong>Coursework Calculator</strong></a>from Rice University.</p>
-    <p class="" style="white-space:pre-wrap;">Wondering how you might construct a “narrative” of your course for students?  Check out:<a href="https://innovation-studio.org/" target="_blank"><strong>Leading with Story</strong></a>From Innovation Studio.</p>
+    <p class="" style="white-space:pre-wrap;">Worried you are giving students too much work when designing asynchronous activities?  Try the <a href="https://cte.rice.edu/workload" target="_blank"><strong>Coursework Calculator</strong></a> from Rice University.</p>
+    <p class="" style="white-space:pre-wrap;">Wondering how you might construct a “narrative” of your course for students?  Check out: <a href="https://innovation-studio.org/" target="_blank"><strong>Leading with Story</strong></a> From Innovation Studio.</p>
     <p style="white-space:pre-wrap;">Be inspired and hear what others are doing as they prepare for Fall on the <a href="https://teachinginhighered.com/episodes/" target="_blank"><strong>Teaching in Higher Ed podcast</strong></a>.</p>
     <p>A great overview of the issues and choices around preparing for Fall in: <a href="https://www.chronicle.com/article/how-im-spending-my-pandemic-summer-vacation?cid=gen_sign_in&amp;cid2=gen_login_refresh" target="_blank"><strong>How I’m Spending My Pandemic Summer Vacation</strong></a></p>
     <p>Driving student engagement is essential to successful teaching and learning.</p>
